img stretching fixed

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -14,7 +14,6 @@ main {
 
 .leftcolumn {
   margin-top: 40px;
-  display: flex;
   float: left;
   width: 40%;
   padding-left: 25%;
@@ -98,4 +97,8 @@ li {
   font-family: "lato", sans-serif;
   font-weight: 100;
   opacity: .6;
+}
+
+img {
+  max-width: 100%;
 }
